--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
-  <div id="pocket">Aloha</div>
+  <div id="pocket"></div>
 <script src="bundle.js"></script>
 </body>
 </html>
